plugins {
    id 'net.fabricmc.fabric-loom' version '1.15-SNAPSHOT'
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = "${project.archives_base_name}-${project.minecraft_version}"
}

repositories {
    maven {
        name = "wispforest-maven"
        url = 'https://maven.wispforest.io/releases/'
    }

    maven {
        name = "meteor-maven"
        url = "https://maven.meteordev.org/releases"
    }

    maven {
        name = "devauth-maven"
        url = "https://pkgs.dev.azure.com/djtheredstoner/DevAuth/_packaging/public/maven/v1"
    }

    maven {
        name = "jama-maven"
        url = "https://mvn.topobyte.de"
    }

    maven {
        name = "jitpack-maven"
        url = "https://jitpack.io"
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    implementation "net.fabricmc:fabric-loader:${project.loader_version}"
    implementation "net.fabricmc.fabric-api:fabric-api:${project.fabricapi_version}"
    implementation "meteordevelopment:orbit:${project.orbit_version}"

    include "meteordevelopment:orbit:${project.orbit_version}"

    implementation("io.wispforest:owo-lib:${project.owolib_version}")
    include "io.wispforest:owo-sentinel:${project.owolib_version}"

    implementation("de.topobyte:jama:${project.jama_version}")
    include "de.topobyte:jama:${project.jama_version}"

    runtimeOnly "net.litetex.mcm:dev-auth-neo:${project.devauth_version}"
}

loom {
    accessWidenerPath = file("src/main/resources/nofrills.accesswidener")
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": inputs.properties.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 25
}

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

jar {
    from("LICENSE") {
        rename { "${it}_${inputs.properties.archivesName}" }
    }
}

// configure the maven publication
publishing {
    publications {
        create("mavenJava", MavenPublication) {
            artifactId = project.archives_base_name
            from components.java
        }
    }

    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
    repositories {
        // Add repositories to publish to here.
        // Notice: This block does NOT have the same function as the block in the top level.
        // The repositories here will be used for publishing your artifact, not for
        // retrieving dependencies.
    }
}